# NeuroMapCHOP

./: CMakeLists.txt  DataManager.cpp  DataManager.h  Info.plist.in  NeuroMapCHOP.cpp  NeuroMapCHOP.h  Parameters.cpp  Parameters.h  README.md  build.sh
log/: log-claude1.md  log-claude2.md
